--- a/templates/secret_number_game.html
+++ b/templates/secret_number_game.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Secret Number Game</title>
-</head>
+{% extends "frame.html" %}
+
+{% block title %}
+    secret_number_game
+{% endblock title %}
+
+{% block css %}
+    <link rel="stylesheet" href="/static/css/index.css">
+{% endblock css %}
+
+{% block content %}
+
 <body>
-    <h1> Welcome to the secret number game</h1>
+    <h1>Welcome to the secret number game</h1>
     <p>Guess the secret number:</p>
     <p>
         {% if secret_number >5 %}
@@ -14,12 +20,8 @@
     <p><small>hint: it is greater than 5</small>
         {% else %}
     </p>
-    <p> <small>hint: it is less  equal than 5</small>
+    <p> <small>hint: it is less equal than 5</small>
     </p>
         {% endif %}
 </body>
-
-
-
-</body>
-</html>
+{% endblock content %}
