--- a/templates/fakebook.html
+++ b/templates/fakebook.html
@@ -1,68 +1,22 @@
-<!DOCTYPE html>
+{% extends "frame.html" %}
 
-<html lang="en">
+{% block title %}
+fakebook
+{% endblock title %}
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/css/exercise_00100_my_fakebook_Katharina Meislitzer.css">
-    <!--Bootstrap Imports -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-    <title>Fakebook</title>
-</head>
+{% block css %}
+<link rel="stylesheet" href="/static/css/index.css">
+{% endblock css %}
+
+{% block content %}
+
 <body>
 <header>
     <h1>Fakebook</h1>
-</header>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Pictures <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Movies</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">Books
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Sad Books</a>
-                    <a class="dropdown-item" href="#">Funny Books</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Serious Books</a>
-                </div>
-            </li>
-            <li class="nav-item">
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
 
 <div><h1>Katharina Meislitzer </h1></div>
 <div class="centered">
-    <img src="./murph.jpg" id="image-pink" style="width:300px;height:200px;">
+    <img src="/static/img/murph.jpg" id="image-pink" style="width:300px;height:200px;">
 </div>
 <p><strong>City:</strong>Vienna</p>
 <p><strong>Education:</strong>theaterstudies &amp; acting</p>
@@ -73,8 +27,8 @@
     <li>Films</li>
     <li>Cats</li>
     <li>Food</li>
-    <li>art</li>
-    <li>beer</li>
+    <li>Art</li>
+    <li>Beer</li>
 </ul>
 <h2>Favorite movies</h2>
 <div>
@@ -121,13 +75,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="murph.jpg" class="image">
+                <img src="/static/img/murph.jpg" class="image">
             </div>
             <div class="carousel-item">
-                <img src="murph2.jpg" class="image" >
+                <img src="/static/img/murph2.jpg" class="image">
             </div>
             <div class="carousel-item">
-                <img src="murph.jpg" class="image" >
+                <img src="/static/img/murph.jpg" class="image">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -150,20 +104,20 @@
 
 <h2 class="blue">Favorite city: Boston</h2>
 <video width="320" height="240" controls>
-    <source src="boston.mp4" type="video/mp4">
+    <source src="/static/img/boston.mp4" type="video/mp4">
 </video>
 <footer>
     <a href="https://www.otago.at">
-        <img border="0" alt="Otago Logo" src="Otago_transparent.jpg" width="100px" height="100px">
+        <img border="0" alt="Otago Logo" src="/static/img/Otago_transparent.jpg" width="100px" height="100px">
     </a>
     <br>
-    <a href="Otago_transparent.jpg" download>
+    <a href="/static/img/Otago_transparent.jpg" download>
         <button type="button" class="button">Download</button>
     </a>
 
     <h1>Good music</h1>
     <audio controls>
-        <source src="lalaland.mp3" type="audio/mp3">
+        <source src="/static/img/lalaland.mp3" type="audio/mp3">
     </audio>
 </footer>
 
@@ -171,9 +125,8 @@
 
 <div class
 <a href="/templates/fakebook">fakebook</a>
-      <a href="/templates/about">about</a>
-    <a href="/templates/portfolio">portfolio</a>
-     <a href="/templates/index">index</a>
+<a href="/templates/about">about</a>
+<a href="/templates/portfolio">portfolio</a>
+<a href="/templates/index">index</a>
 </body>
-
-</html>
+{% endblock content %}
