--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>index</title>
+{% extends "frame.html" %}
+
+{% block title %}
+    index
+{% endblock title %}
+
+{% block css %}
     <link rel="stylesheet" href="/static/css/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="hw_1030_katzensalon_kathi.css">
+{% endblock css %}
+
+{% block content %}
     <h1>Homepage</h1>
     <p>First paragraph!</p>
     <p>{{myname}}</p>
-
-<a href="/fakebook">fakebook</a>
-      <a href="/about">about</a>
-    <a href="/portfolio">portfolio</a>
-     <a href="/index">index</a>
-</body>
-</html>
+{% endblock content %}
