--- a/templates/frame.html
+++ b/templates/frame.html
@@ -49,6 +49,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/fakebook">Fakebook</a>
                     <a class="dropdown-item" href="/secret_number_game">Secret number game</a>
+                    <a class="dropdown-item" href="/katzensalon">Katzensalon</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/blog">Blog</a>
                 </div>
