--- a/templates/katzensalon.html
+++ b/templates/katzensalon.html
@@ -19,13 +19,13 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active imagesize">
-            <img src="./katzenbild1.jpg" class="d-block w-100" alt="...">
+            <img src="/static/img/katzenbild1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item imagesize">
-            <img src="./katzenbild2.jpg" class="d-block w-100" alt="...">
+            <img src="/static/img/katzenbild2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item imagesize">
-            <img src="./katzenbild3.jpg" class="d-block w-100" alt="...">
+            <img src="/static/img/katzenbild3.jpg" class="d-block w-100" alt="...">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -40,7 +40,7 @@
 <div class="middle  "><h1>Gadsen-Services</h1></div>
 <div class="card-deck">
     <div class="card">
-        <img src="cat5.jpg" class="card-img-top" alt="...">
+        <img src="/static/img/cat5.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Gadsen Haarschnitte</h5>
             <p class="card-text">Meine große Leidenschaft galt immer schon den Tieren.
@@ -51,7 +51,7 @@
         </div>
     </div>
     <div class="card">
-        <img src="cat3.jpg" class="card-img-top" alt="...">
+        <img src="/static/img/cat3.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Fellpflege</h5>
             <p class="card-text">Bei langhaarigen Katzen kommt es vorallem auf der Bauchunterseite, im Achsel- und
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="card">
-        <img src="cat4.jpg" class="card-img-top" alt="...">
+        <img src="/static/img/cat4.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Komplettpflege</h5>
             <p class="card-text"> Die Komplett Pflege ist ein Wellnesprogramm, welches komplett auf die Bedürfnisse
@@ -256,7 +256,7 @@
                 <p>kathi@katzensalon.at</p>
             </div>
             <div class="col-sm">
-                <img src="./cat_logo.png" style="width:100px;">
+                <img src="/static/img/cat_logo.png" style="width:100px;">
             </div>
             <div class="col-sm">
                 <h4>Beliebte Services</h4>
