--- a/templates/blog.html
+++ b/templates/blog.html
@@ -17,8 +17,8 @@
         <h5 class="card-title">{{receipe.name}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{receipe.taste}}</h6>
         <p class="card-text">{{receipe.description}}</p>
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+        <a href="#" class="card-link">Get receipe</a>
+        <a href="#" class="card-link">Rate receipe</a>
     </div>
 </div>
 {% endfor %}
