--- a/templates/frame.html
+++ b/templates/frame.html
@@ -41,6 +41,9 @@
             <li class="nav-item">
                 <a class="nav-link" href={{url_for('books')}}>Books</a>
             </li>
+             <li class="nav-item">
+                <a class="nav-link" href={{url_for('books_add')}}>Add Books</a>
+            </li>
              <li class="nav-item active">
                 <a class="nav-link" href="https://dashboard.heroku.com/apps/katmeis">Heroku<span class="sr-only">(current)</span></a>
             </li>
@@ -58,6 +61,8 @@
                     <a class="dropdown-item" href={{url_for('katzensalon')}}>Katzensalon</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href={{url_for('blog')}}>Blog</a>
+                    <a class="dropdown-item" href={{url_for('accounts')}}>Accounts</a>
+                    <a class="dropdown-item" href={{url_for('register')}}>Register</a>
                 </div>
             </li>
         </ul>
