--- a/templates/books.html
+++ b/templates/books.html
@@ -17,8 +17,8 @@
         <h5 class="card-title">{{book.title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
         <p class="card-text">{{book.description}}</p>
-        <a class="card-link" href="/books_add">add book</a>
-        <a class="card-link" href="/books_delete">delete book</a>
+        <a class="card-link" href="/books/{{book.id}}/books_delete">delete</a>
+        <a class="card-link" href="/books/{{book.id}}/edit">edit</a>
     </div>
 </div>
 {% endfor %}
