--- a/templates/frame.html
+++ b/templates/frame.html
@@ -46,16 +46,19 @@
              <li class="nav-item active">
                 <a class="nav-link" href={{url_for('books_add')}}>Add Books</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href={{url_for('logout')}}>Logout</a>
             </li>
-             <li class="nav-item active">
+            <li class="nav-item">
+                <a class="dropdown-item" href="/weather/london">Weather</a>
+            </li>
+             <li class="nav-item">
                 <a class="nav-link" href="https://dashboard.heroku.com/apps/katmeis">Heroku<span class="sr-only">(current)</span></a>
             </li>
-               <li class="nav-item active">
+               <li class="nav-item">
                 <a class="nav-link" href="https://github.com/katharinameislitzer">Github<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href={{url_for('login')}}>Login<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
